add associations to models, validations, update css on widget

--- a/client/src/app/auth/auth.component.css
+++ b/client/src/app/auth/auth.component.css
@@ -1,3 +1,4 @@
-
+@import 'https://ok1static.oktacdn.com/assets/js/sdk/okta-signin-widget/2.1.0/css/okta-sign-in.min.css';
+@import 'https://ok1static.oktacdn.com/assets/js/sdk/okta-signin-widget/2.1.0/css/okta-theme.css';
 
 /*# sourceMappingURL=auth.component.css.map */
