--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,1 +1,11 @@
-html, body { height: 100%; }
+html, body {
+    margin: 0;
+    min-width: 1000px;
+}
+
+body {
+    min-height: 100%;
+    position: relative;
+    padding-bottom: 80px;
+    box-sizing: border-box;
+}
