--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,9 @@
-<div class="container">
-  <router-outlet></router-outlet>
-</div>
+<header>
+  <app-header></app-header>
+</header>
+
+<router-outlet></router-outlet>
+
+<footer>
+
+</footer>
