--- a/client/src/app/modules/dashboard/pages/dashboard.component.html
+++ b/client/src/app/modules/dashboard/pages/dashboard.component.html
@@ -1,1 +1,16 @@
-<p>dashboard works!</p>
+<dx-responsive-box>
+  <dxi-col [ratio]="1"></dxi-col>
+  <dxi-col [ratio]="5"></dxi-col>
+  <dxi-col [ratio]="1"></dxi-col>
+
+  <dxi-item>
+    <dxi-location [col]="0"></dxi-location>
+  </dxi-item>
+  <dxi-item>
+    <dxi-location [col]="1"></dxi-location>
+    <app-data-grid></app-data-grid>
+  </dxi-item>
+  <dxi-item>
+    <dxi-location [col]="2"></dxi-location>
+  </dxi-item>
+</dx-responsive-box>
