--- a/client/src/app/core/header/header.component.scss
+++ b/client/src/app/core/header/header.component.scss
@@ -1,11 +1,4 @@
-.dx-tabs-wrapper {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: flex-end;
-  outline: none;
-  .dx-item.dx-tab.dx-nav-item {
-  flex-basis: 10%;
-  }
+.dx-toolbar {
+  background: #51989a;
+  padding: 0 1em;
 }
-
