--- a/client/src/app/core/header/header.component.css
+++ b/client/src/app/core/header/header.component.css
@@ -1,12 +1,6 @@
-.dx-tabs-wrapper {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: flex-end;
-  outline: none;
-}
-.dx-tabs-wrapper .dx-item.dx-tab.dx-nav-item {
-  flex-basis: 10%;
+.dx-toolbar {
+  background: #51989a;
+  padding: 0 1em;
 }
 
 /*# sourceMappingURL=header.component.css.map */
