introduce side-nav component, place in app.component.html, remove app-dashboard

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,9 +1,5 @@
-<header>
+<div>
   <app-header></app-header>
-</header>
-
-<router-outlet></router-outlet>
-
-<footer>
-
-</footer>
+  <app-side-nav></app-side-nav>
+  <router-outlet></router-outlet>
+</div>
