--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div>
   <app-header></app-header>
-  <app-side-nav></app-side-nav>
+  <app-side-nav *ngIf="(isAuthenticated$ | async)"></app-side-nav>
   <router-outlet></router-outlet>
 </div>
