implement header buttons inside of html file; add onDrawerToggle,onLogout methods

--- a/client/src/app/core/header/header.component.scss
+++ b/client/src/app/core/header/header.component.scss
@@ -1,4 +1,6 @@
+$header-primary-color: #51989a;
+
 .dx-toolbar {
-  background: #51989a;
+  background: $header-primary-color;
   padding: 0 1em;
 }
