--- a/client/src/app/core/header/header.component.html
+++ b/client/src/app/core/header/header.component.html
@@ -1,8 +1,12 @@
 <header>
   <dx-toolbar height="80px">
     <ng-container *ngIf="isAuth">
-      <dxi-item [options]="menuButtonOptions" location="before" widget="dxButton"></dxi-item>
-      <dxi-item [options]="userButtonOptions" location="after" widget="dxButton"></dxi-item>
+      <dxi-item location="before" >
+        <dx-button id="menuButton" icon="menu" type="text" (onClick)="onDrawerToggle($event)"></dx-button>
+      </dxi-item>
+      <dxi-item location="after">
+        <dx-button id="logoutButton" icon="runner" type="text" (onClick)="onLogout()"></dx-button>
+      </dxi-item>
     </ng-container>
     <dxi-item location="center" text="trowoo"></dxi-item>
   </dx-toolbar>
