implement highlighted text for position performance cells

--- a/client/src/app/modules/all-portfolios-grid/pages/all-portfolios-grid.component.css
+++ b/client/src/app/modules/all-portfolios-grid/pages/all-portfolios-grid.component.css
@@ -1,3 +1,8 @@
-
+#portfolioGrid .positive-change {
+  color: #2bb71b;
+}
+#portfolioGrid .negative-change {
+  color: #f00;
+}
 
 /*# sourceMappingURL=all-portfolios-grid.component.css.map */
