--- a/client/src/app/core/header/header.component.css
+++ b/client/src/app/core/header/header.component.css
@@ -1,6 +1,17 @@
-.dx-toolbar {
-  background: #51989a;
-  padding: 0 1em;
-}
+/* Error: Can't find stylesheet to import.
+ *   ,
+ * 1 | @import 'abstracts/variables';
+ *   |         ^^^^^^^^^^^^^^^^^^^^^
+ *   '
+ *   header.component.scss 1:9  root stylesheet */
 
-/*# sourceMappingURL=header.component.css.map */
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Can't find stylesheet to import.\a   \2577 \a 1 \2502  @import 'abstracts/variables';\a   \2502          ^^^^^^^^^^^^^^^^^^^^^\a   \2575 \a   header.component.scss 1:9  root stylesheet";
+}
